made title more visible than name, fixed avg score not shown

--- a/public/css/freelancer.css
+++ b/public/css/freelancer.css
@@ -2,7 +2,6 @@
 /* freelancer main card */
 
 .freelancer-view {
-  width: 100%;
   margin: 10vh 10vw 5vh 10vw;
   width: auto;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -41,6 +40,10 @@
 
 .freelancer-header-info > h1, .freelancer-header-info > div, .freelancer-header-info > span {
   padding-bottom: 5px;
+}
+
+h1.freelancer-header-name {
+  font-weight: lighter;
 }
 
 address {
@@ -100,7 +103,7 @@ article {
 }
 
 .review-author {
-  font-size: 2em;
+  font-size: 1.2em;
   color: #F44336;
   flex-basis: 100%;
   margin-bottom: 10px;
